--- a/src/components/GameCard/GameCard.css
+++ b/src/components/GameCard/GameCard.css
@@ -110,8 +110,22 @@
     width: 72px;
     height: 100px;
   }
-
   .card-number {
     font-size: 30px;
+  }
+}
+
+@media (max-width: 380px) {
+  .card {
+    width: 58px;
+    height: 82px;
+    border-radius: 10px;
+  }
+  .card-face {
+    border-radius: 10px;
+  }
+  .card-number {
+    font-size: 24px;
+    letter-spacing: -1px;
   }
 }
